--- a/src/app/cartao-credito/cartao-credito.component.scss
+++ b/src/app/cartao-credito/cartao-credito.component.scss
@@ -11,10 +11,14 @@
     margin: 50px 0;
 }
 
+h3 {
+    font-size: 18.72px !important;
+}
+
 body {
     color: #777777;
     font-family: "Lato", "Helvetica Neue", "Arial", "Helvetica", sans-serif;
-    font-size: 13px;
+    // font-size: 13px;
     line-height: 19.5px;
 }
 
@@ -62,4 +66,9 @@ a {
 
 .card-link {
     text-decoration: none;
+}
+
+.header-modal-despesas-cc {
+    display: flex;
+    flex-direction: column;
 }
