--- a/src/app/despesa/despesa.component.scss
+++ b/src/app/despesa/despesa.component.scss
@@ -10,3 +10,13 @@
     margin-top: 24px;
     margin-bottom: 24px;
 }
+
+.material-icons {
+    font-size: 20px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.material-icons-delete:hover {
+    color: #ff0000;
+}
