--- a/src/app/recursos/recursos.component.html
+++ b/src/app/recursos/recursos.component.html
@@ -1,3 +1,4 @@
+<h1>Recursos</h1>
 <div class="container">
     <table class="table">
         <thead>
@@ -13,17 +14,78 @@
         </thead>
         <tbody>
             <tr *ngFor="let recurso of listRecursos">
-                <th scope="row">{{recurso.conta}}</th>
-                <td>{{recurso.saldo.toString() | currency: 'BRL'}}</td>
-                <td>{{recurso.tipo}}</td>
-                <td>{{recurso.recebido ? 'Sim' : 'Não'}}</td>
-                <td>{{recurso.dataRecebimento | date: 'dd/MM/yyyy'}}</td>
-                <td>{{recurso.descricao}}</td>
+                <th scope="row">{{$any(recurso).conta}}</th>
+                <td>{{$any(recurso).saldo.toString() | currency: 'BRL'}}</td>
+                <td>{{$any(recurso).tipo}}</td>
+                <td>{{$any(recurso).recebido ? 'Sim' : 'Não'}}</td>
+                <td>{{$any(recurso).dataRecebimento | date: 'dd/MM/yyyy'}}</td>
+                <td>{{$any(recurso).descricao}}</td>
                 <td>
                     <span class="material-icons"> mode_edit</span>
-                    <span class="material-icons material-icons-delete">delete</span>
+                    <span class="material-icons material-icons-delete" data-bs-toggle="modal" data-bs-target="#ConfirmarExclusão" (click)="deleteInfo($any(recurso)._id,$any(recurso).saldo,$any(recurso).conta)">delete</span>
                 </td>
             </tr>
         </tbody>
     </table>
+</div>
+
+<!-- MODAL CONFIRMAR EXCLUSÃO -->
+
+<div class="modal fade" id="ConfirmarExclusão" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 *ngIf="!successDelete && !errorDelete" class="modal-title" id="exampleModalLabel">Tem certeza que deseja excluir?</h2>
+                <h2 *ngIf="successDelete" class="modal-title title-success" id="exampleModalLabel">Sucesso!</h2>
+                <h2 *ngIf="errorDelete" class="modal-title title-error" id="exampleModalLabel">Não foi possível deletar, tente novamente mais tarde.</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div *ngIf="!successDelete && !errorDelete" id="itensDell">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th scope="col">Conta</th>
+                                <th scope="col">Saldo</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                            <tr>
+                                <td scope="row">{{conta}}</td>
+                                <td>{{saldo | currency: 'BRL'}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div *ngIf="successDelete" id="successDel" class="centralizar-icon">
+                    <div class="sa">
+                        <div class="sa-success">
+                            <div class="sa-success-tip"></div>
+                            <div class="sa-success-long"></div>
+                            <div class="sa-success-placeholder"></div>
+                            <div class="sa-success-fix"></div>
+                        </div>
+                    </div>
+                </div>
+                <div *ngIf="errorDelete" id="errorDel" class="centralizar-icon">
+                    <div class="sa">
+                        <div class="sa-error">
+                            <div class="sa-error-x">
+                                <div class="sa-error-left"></div>
+                                <div class="sa-error-right"></div>
+                            </div>
+                            <div class="sa-error-placeholder"></div>
+                            <div class="sa-error-fix"></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="zerarVariaveis()">Fechar</button>
+                <button *ngIf="!successDelete && !errorDelete" type="button" class="btn btn-danger" (click)="deleteRecurso(idDelete)">Deletar</button>
+            </div>
+        </div>
+    </div>
 </div>
