ajustes depesas -conta-recursos

--- a/src/app/cartao-credito/cartao-credito.component.html
+++ b/src/app/cartao-credito/cartao-credito.component.html
@@ -10,7 +10,7 @@
                 <div class="card-body">
                     <img class="img-bandeira-cartao" src="/assets/images/bandeiraCartoes/{{$any(cc).bandeira}}.png" alt="">
                     <h3 class="card-title">{{$any(cc).nome}}</h3>
-                    <p>{{$any(cc)._id}}</p>
+                    <!-- <p>{{$any(cc)._id}}</p> -->
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a (click)="abrirModalAddDespesaCC($any(cc).bandeira,$any(cc)._id)" data-bs-toggle="modal" data-bs-target="#modalCartao" data-bs-whatever="@mdo" class="card-link">Adicionar despesa</a>
                     <a (click)="exibirFatura($any(cc).nome,$any(cc).bandeira,$any(cc)._id)" class="card-link " data-bs-toggle="modal" data-bs-target="#modalFatura">Ver despesa</a>
@@ -183,7 +183,7 @@
                     </thead>
                     <tbody>
                         <tr *ngFor="let desp of despCC">
-                            <th scope="row">{{$any(desp).valor}}</th>
+                            <th scope="row">{{$any(desp).valor | currency: 'BRL' }}</th>
                             <td>{{$any(desp).categoria}}</td>
                             <td>{{$any(desp).dataVencimento | date: 'dd/MM/yyyy'}}</td>
                             <td>{{$any(desp).fixa}}</td>
