ajustes recursos - conta

--- a/src/app/conta/conta.component.html
+++ b/src/app/conta/conta.component.html
@@ -20,7 +20,7 @@
                 </div>
                 <div>
                     <p id="tres">Despesas</p>
-                    <p id="quatro">xxx</p>
+                    <p id="quatro">{{valoTotalDesp | currency: 'BRL'}}</p>
                 </div>
             </div>
             <div class="saldo-conta">
