--- a/src/app/despesa/despesa.component.html
+++ b/src/app/despesa/despesa.component.html
@@ -1,8 +1,10 @@
 <div class="tableDespesas">
-    <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#modalDespesa" data-bs-whatever="@mdo">Adicionar
-      <span class="material-icons">add_circle_outline</span>
+    <div class="header-card-despesa">
+        <button type="button" class="btn btn-outline-success btn-with-icon" data-bs-toggle="modal" data-bs-target="#modalDespesa" data-bs-whatever="@mdo">Adicionar
+      <span class="material-icons align-icon-btn">add_circle_outline</span>
     </button>
-    <p class="titulo-despesas">DESPESAS</p>
+    </div>
+    <h1>Despesas</h1>
 
     <table class="table">
         <thead>
@@ -92,11 +94,6 @@
                         </div>
                     </div>
                 </form>
-                <div class="conta-opcoes ">
-                    <a class="conta-opc-despesa">Despesas</a>
-                    <a class="conta-opc-receita">Receitas</a>
-                    <a class="conta-opc-transacao">Transações</a>
-                </div>
             </div>
             <div class="modal-footer ">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
