--- a/src/app/despesa/despesa.component.html
+++ b/src/app/despesa/despesa.component.html
@@ -47,7 +47,7 @@
             <div class="modal-body">
                 <form [formGroup]="formadicionarDespesa">
                     <label for="conta-saldo">Valor:</label>
-                    <input type="text" id="conta-saldo" class="form-control" formControlName="valor">
+                    <input type="text" currencyMask id="conta-saldo" class="form-control" formControlName="valor">
                     <div class="row">
                         <div class="mb-3 col ">
                             <label for="conta-name " class="col-form-label">Descrição:</label>
