--- a/src/app/conta/conta.component.html
+++ b/src/app/conta/conta.component.html
@@ -1,10 +1,10 @@
-<div>
-    <div class="header-card-despesa">
+<div class="card-contas">
+    <div class="header-card-conta-container">
         <button type="button" class="btn btn-outline-success btn-with-icon" data-bs-toggle="modal" data-bs-target="#modalConta" data-bs-whatever="@mdo">Adicionar
           <span class="material-icons align-icon-btn">add_circle_outline</span>
         </button>
     </div>
-    <p class="titulo-contas">CONTAS</p>
+    <h1>Contas</h1>
     <!-- <div *ngFor="let despesa of lsDespesas"> -->
     <p>{{lsContas}}</p>
     <div *ngFor="let conta of lsContas ">
@@ -21,16 +21,16 @@
             <div class="valores-conta">
                 <div>
                     <p id="um">Receitas</p>
-                    <p id="dois">{{$any(conta).saldo | currency: 'BRL'}}</p>
+                    <p id="dois">{{($any(conta).saldo > 0) ? ($any(conta).saldo | currency: 'BRL' ):( 0 | currency: 'BRL')}}</p>
                 </div>
                 <div>
                     <p id="tres">Despesas</p>
-                    <p id="quatro">{{valoTotalDesp | currency: 'BRL'}}</p>
+                    <p id="quatro">{{($any(conta).totalDespesas) ? ($any(conta).totalDespesas | currency: 'BRL') : (0 | currency: 'BRL')}}</p>
                 </div>
             </div>
             <div class="saldo-conta">
                 <p id="um">Saldo:</p>
-                <p id="dois">xxx</p>
+                <p id="dois">{{ $any(conta).saldo - $any(conta).totalDespesas | currency: 'BRL'}}</p>
             </div>
         </div>
     </div>
