--- a/src/app/conta/conta.component.scss
+++ b/src/app/conta/conta.component.scss
@@ -8,6 +8,10 @@
     }
 }
 
+.card-contas {
+    padding: 24px;
+}
+
 .conta-opc-despesa {
     color: #ff0000;
 }
@@ -114,4 +118,20 @@
     margin-left: 15px;
     font-size: 18px;
     margin-top: 24px;
+}
+
+.header-card-conta-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.btn-with-icon {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.align-icon-btn {
+    margin-left: 10px;
 }
