--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,6 +6,7 @@
                     <h1>Easy</h1>
                     <p class="fin">Finanças</p>
                 </div>
+                <button (click)="enviarEmail()">ENVIAR EMAIL</button>
                 <!-- Example single danger button -->
                 <div class="btn-adicionar">
                     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Adicionar</button>
